--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     "mocha": "~1.10.0",
     "should": "^3.2.0"
   },
-  "keywords": []
+  "keywords": [],
+  "publishConfig":{"registry":"https://registry.npmjs.org/"}
 }
